changed header and footer to be fixed regardless of scrolling

--- a/css/legal-page.css
+++ b/css/legal-page.css
@@ -1,8 +1,10 @@
 .legal-header {
+  position: fixed;
   background-color: #e2e2e2;
   padding: 30px;
   margin-top: 60px;
   width: 100%;
+  z-index: 2;
 }
 
 .legal-header h1 {
@@ -30,6 +32,8 @@ section {
   background-color: #2b2d3b;
   height: max-content;
   padding: 10px 16px;
+  position: sticky;
+  top: 200px;
 }
 
 .document-content {
@@ -37,6 +41,8 @@ section {
   flex-direction: column;
   gap: 30px;
   max-width: 600px;
+  margin-top: 150px;
+  margin-bottom: 100px;
 }
 
 .document-content p {
@@ -55,13 +61,19 @@ section {
 footer {
   display: flex;
   align-items: center;
+  height: 70px;
   width: 100%;
   background-color: #e2e2e2;
   padding: 0 30px;
   min-height: 70px;
+  position: fixed;
+  bottom: 0px;
+  z-index: 2;
 }
 
 .footer-content {
+  position: fixed;
+  height: 70px;
   width: 100%;
   max-width: 900px;
   display: flex;
@@ -72,6 +84,7 @@ footer {
 }
 
 .agree-btn {
+  position: sticky;
   padding: 10px 16px;
   font-weight: bold;
   background-color: blueviolet;
