--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -1,10 +1,25 @@
 .robot-container {
+  position: fixed;
+  top: 150px;
+  left: 50px;
+  bottom: 300px;
 }
 
 .robot-face-shape {
+  #rectangle {
+    width: 200px;
+    height: 100px;
+    background: lightgray;
+  }
 }
 
 .robot-eye-left {
+  #triangle-topleft {
+    width: 0;
+    height: 0;
+    border-top: 100px solid blue;
+    border-right: 100px solid transparent;
+  }
 }
 
 .robot-eye-right {
