changed robot ears and nose and eyes

--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -1,37 +1,71 @@
 .robot-container {
-  position: fixed;
-  top: 150px;
+  position: centered;
+  top: 300px;
   left: 50px;
   bottom: 300px;
+  margin-top: 80px;
 }
 
 .robot-face-shape {
-  #rectangle {
-    width: 200px;
-    height: 100px;
-    background: lightgray;
-  }
+  position: relative;
+  width: 800px;
+  height: 700px;
+  background: lightgray;
+  margin-left: auto;
+  margin-top: 50px;
+  margin-bottom: 200px;
+  margin-right: auto;
 }
 
 .robot-eye-left {
-  #triangle-topleft {
-    width: 0;
-    height: 0;
-    border-top: 100px solid blue;
-    border-right: 100px solid transparent;
-  }
+  width: 0;
+  height: 0;
+  border-top: 100px solid blue;
+  border-right: 100px solid transparent;
+  position: relative;
+  margin-left: 120px;
+  top: 95px;
 }
 
 .robot-eye-right {
+  width: 0;
+  height: 0;
+  border-top: 100px solid green;
+  border-left: 100px solid transparent;
+  position: relative;
+  margin-left: 600px;
+  top: 0px;
 }
 
 .robot-ear-left {
+  display: block;
+  width: 126px;
+  height: 180px;
+  background-color: cyan;
+  border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
+  position: absolute;
+  margin-top: -650px;
+  margin-left: 330px;
 }
 
 .robot-ear-right {
+  width: 0;
+  height: 0;
+  border-top: 50px solid transparent;
+  border-left: 100px solid red;
+  border-bottom: 50px solid transparent;
+  position: relative;
+  margin-left: 1254px;
+  margin-top: -600px;
 }
 
 .robot-nose {
+  width: 100px;
+  height: 100px;
+  background: peru;
+  border-radius: 50%;
+  margin-left: 375px;
+  margin-top: 150px;
 }
 
 .robot-teeth {
